Add user and roles CRUDs and permission validation on endpoints